--- a/clonecoding/boravora/index.html
+++ b/clonecoding/boravora/index.html
@@ -7,13 +7,30 @@
   <title>React JS</title>
 </head>
 <body>
-  
+  <div id="root"></div>
 </body>
 
-<!-- React import 하기 -->
 <script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
 <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
-<script>
 
+<script>
+  const root = document.getElementById('root');
+  const h3 =  React.createElement(
+    'h3', 
+    {
+      id: 'title',
+      onMouseEnter: () => console.log('mouse enter'),
+    }, 
+    'Hello World!'
+    );
+  const btn = React.createElement(
+    'button', 
+    {
+      onClick: () => console.log('Im clicked'),
+      style: { background: 'aqua', }
+    }, 
+    'Click me')
+  const container = React.createElement('div', null, [h3, btn])
+  ReactDOM.render(container, root)
 </script>
 </html>
