--- a/clonecoding/boravora/index.html
+++ b/clonecoding/boravora/index.html
@@ -12,25 +12,39 @@
 
 <script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
 <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
-<script>
+<script type="text/babel">
   const root = document.getElementById('root');
-  const h3 =  React.createElement(
-    'h3', 
-    {
-      id: 'title',
-      onMouseEnter: () => console.log('mouse enter'),
-    }, 
-    'Hello World!'
-    );
-  const btn = React.createElement(
-    'button', 
-    {
-      onClick: () => console.log('Im clicked'),
-      style: { background: 'aqua', }
-    }, 
-    'Click me')
-  const container = React.createElement('div', null, [h3, btn])
+  const Title = (
+    <h3 id = "title" onMouseEnter= {() => console.log('mouse enter')}>
+      Hello World!
+    </h3>);
+  /* const h3 =  React.createElement(
+      'h3', 
+      {
+        id: 'title',
+        onMouseEnter: () => console.log('mouse enter'),
+      }, 
+      'Hello World!'
+    ); */
+  const Button = (
+    <button 
+      style= {{ 
+        background: 'aqua', 
+      }} 
+      onClick={() => console.log('Im clicked')}>
+      Click me
+    </button>);
+  /* const btn = React.createElement(
+      'button', 
+      {
+        onClick: () => console.log('Im clicked'),
+        style: { background: 'aqua', }
+      }, 
+      'Click me'
+    ); */
+  const container = React.createElement('div', null, [Title, Button])
   ReactDOM.render(container, root)
 </script>
 </html>
