--- a/clonecoding/calko/index.html
+++ b/clonecoding/calko/index.html
@@ -6,6 +6,7 @@
   <script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
   <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
   <script>
+    // 2.4 Recap
     const root = document.getElementById("root");
     const h3 = React.createElement(
       "h3", 
