--- a/clonecoding/calko/index.html
+++ b/clonecoding/calko/index.html
@@ -8,12 +8,18 @@
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
     const root = document.getElementById("root");
-    const Title = (
-      <h3 id="title" onMouseEnter={() => console.log("mouse enter")}>
-        Hello I'm ad title
-      </h3>
-    );
-    const Button = (
+    
+    // function
+    function Title() {
+      return (
+        <h3 id="title" onMouseEnter={() => console.log("mouse enter")}>
+          Hello I'm a title
+        </h3>
+      );
+    };
+
+    // arrow function
+    const Button = () => (
       <button 
         style={{
           backgroundColor: "tomato",
@@ -23,7 +29,12 @@
         Click me
       </button>
     );
-    const container = React.createElement("div", null, [Title, Button])
-    ReactDOM.render(container, root);
+    const Container = () => (
+      <div>
+        <Title /> 
+        <Button />
+      </div>
+    );
+    ReactDOM.render(<Container />, root);
   </script>
 </html>
