--- a/clonecoding/sunny/index.html
+++ b/clonecoding/sunny/index.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <body>
-    <span>Total click: 0</span>
-    <button id="btn">Click me</button>
+    <div id="root"></div>
   </body>
+  <script src="https://unpkg.com/react@18.2.0/umd/react.production.min.js"></script>
+  <script src="https://unpkg.com/react-dom@18.2.0/umd/react-dom.production.min.js"></script>
   <script>
-    let counter = 0;
-    const button = document.getElementById("btn");
-    const span = document.querySelector("span");
-    function handleClick() {
-      counter = counter + 1;
-      span.innerText = `Total clicks: ${counter}`;
-    }
-    button.addEventListener("click", handleClick);
+    const root = document.getElementById("root");
+    const span = React.createElement("span", { id: "sexy-span", style:{ color: "red"} }, "Hello I'm a span");
+    ReactDOM.createRoot(root).render(span);
   </script>
 </html>
