--- a/clonecoding/sunny/index.html
+++ b/clonecoding/sunny/index.html
@@ -7,7 +7,16 @@
   <script src="https://unpkg.com/react-dom@18.2.0/umd/react-dom.production.min.js"></script>
   <script>
     const root = document.getElementById("root");
-    const span = React.createElement("span", { id: "sexy-span", style:{ color: "red"} }, "Hello I'm a span");
-    ReactDOM.createRoot(root).render(span);
+    const h3 = React.createElement("h3", { id: "title",
+      onmouseenter: () => console.log("mouse enter"),
+    }, "Hello I'm a span");
+    const btn = React.createElement("button", {
+      onClick: () => console.log("im clicked"),
+      style: {
+        backgroundColor: "tomato",
+      }
+    }, "Click me");
+    const container = React.createElement("div", null, [h3, btn]);
+    ReactDOM.createRoot(root).render(container);
   </script>
-</html>
+</html> 
