--- a/clonecoding/sunny/index.html
+++ b/clonecoding/sunny/index.html
@@ -5,18 +5,31 @@
   </body>
   <script src="https://unpkg.com/react@18.2.0/umd/react.production.min.js"></script>
   <script src="https://unpkg.com/react-dom@18.2.0/umd/react-dom.production.min.js"></script>
-  <script>
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <script type="text/babel">
     const root = document.getElementById("root");
+    const Title = (<h3 id="title" onmouseenter={() => console.log("mouse enter")}>Hello I'm a span</h3>);
+    /*
     const h3 = React.createElement("h3", { id: "title",
       onmouseenter: () => console.log("mouse enter"),
     }, "Hello I'm a span");
+    */
+    const Button = (
+      <button style={{backgroundColor: "tomato",}}
+      onClick={() => console.log("im clicked")}>
+      Click me
+      </button>
+    );
+    /*
     const btn = React.createElement("button", {
       onClick: () => console.log("im clicked"),
       style: {
         backgroundColor: "tomato",
       }
     }, "Click me");
-    const container = React.createElement("div", null, [h3, btn]);
-    ReactDOM.createRoot(root).render(container);
+    */
+    const container = React.createElement("div", null, [Title, Button]);
+    ReactDOM.createRoot(root).render(container)
+    
   </script>
 </html> 
