--- a/clonecoding/calko/index.html
+++ b/clonecoding/calko/index.html
@@ -13,6 +13,9 @@
       const onClick = () => {
         setCounter(counter + 1);
       };
+      // 3.3 Recap
+      console.log("rendered");
+      console.log(counter);
       return (
         <div>
           <h3>Total clicks: {counter}</h3>
