--- a/clonecoding/knom/react-for-beginners/index.html
+++ b/clonecoding/knom/react-for-beginners/index.html
@@ -9,20 +9,17 @@
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
     const root = document.getElementById("root");
-    let counter = 0;
-    function countUP() {
-      counter += 1;
-      Render();
+
+    function App() {
+      const [counter, modifier] = React.useState(0);
+      return (
+        <div>
+          <h3>Total clicks: {counter}</h3>
+          <button>Click me</button>
+        </div>
+      );
     }
-    function Render() {
-      ReactDOM.render(<Container />, root);
-    }
-    const Container = () => (
-      <div>
-        <h3>Total clicks: {counter}</h3>
-        <button onClick={countUP}>Click me</button>
-      </div>
-    );
-    Render();
+
+    ReactDOM.render(<App />, root);
   </script>
 </html>
