[feat] 공통스타일 적용 및 props를 이용하여 다른 스타일 적용

--- a/clonecoding/boravora/index.html
+++ b/clonecoding/boravora/index.html
@@ -15,19 +15,25 @@
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
 <script type="text/babel">
+  function Btn({ text, big }) {
+    return (
+      <button style={{
+      backgroundColor:"royalblue",
+      color:"white",
+      padding:"10px 20px",
+      border:0,
+      borderRadius:10,
+      fontSize: big ? 18 : 16,
+      }}>
+        {text}
+      </button>
+    );
+  }
   function App() {
-    const [minutes, setMinutes] = React.useState()
-    const onChange = (event) => {
-      setMinutes(event.target.value);
-    }
-    return(
+    return (
       <div>
-        <h1 className = "hi" >Super Converter</h1>
-        <label htmlFor = "minutes" >Minutes</label>
-        <input value = {minutes} id = "minutes" placeholder = "Minutes" type = "number" onChange = {onChange} />
-        <h4>You want to convert {minutes}</h4>
-        <label htmlFor = "hours" >Hours</label>
-        <input id = "hours" placeholder = "Hours" type = "number" />
+        <Btn text = "Save Changes" big = {true} />
+        <Btn text = "Continue" big = {false} />
       </div>
     );
   }
