--- a/clonecoding/calko/index.html
+++ b/clonecoding/calko/index.html
@@ -11,11 +11,9 @@
     function App() {
       const [counter, setCounter] = React.useState(0);
       const onClick = () => {
-        setCounter(counter + 1);
+        // setCounter(counter + 1);
+        setCounter((current) => current + 1)
       };
-      // 3.3 Recap
-      console.log("rendered");
-      console.log(counter);
       return (
         <div>
           <h3>Total clicks: {counter}</h3>
