--- a/clonecoding/boravora/index.html
+++ b/clonecoding/boravora/index.html
@@ -15,25 +15,29 @@
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
 <script type="text/babel">
-  function Btn({ text, big }) {
+  function Btn({text, onClick}) {
     return (
-      <button style={{
-      backgroundColor:"royalblue",
-      color:"white",
-      padding:"10px 20px",
-      border:0,
-      borderRadius:10,
-      fontSize: big ? 18 : 16,
+      <button
+        onClick = {onClick}
+        style={{
+          backgroundColor:"royalblue",
+          color:"white",
+          padding:"10px 20px",
+          border:0,
+          borderRadius:10
       }}>
         {text}
       </button>
     );
   }
+  const MemorizedBtn = React.memo(Btn)
   function App() {
+    const [value, setValue] = React.useState("Save Changes");
+    const changeValue = () => setValue("Revert Changes");
     return (
       <div>
-        <Btn text = "Save Changes" big = {true} />
-        <Btn text = "Continue" big = {false} />
+        <Btn text = {value} onClick = {changeValue} />
+        <Btn text = "Continue" />
       </div>
     );
   }
