--- a/clonecoding/knom/react-for-beginners/index.html
+++ b/clonecoding/knom/react-for-beginners/index.html
@@ -4,29 +4,39 @@
     <div id="root"></div>
   </body>
 
-  <script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
-  <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
+  <script src="https://unpkg.com/react@17.0.2/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
     function App() {
-      const [minutes, setMinutes] = React.useState();
+      const [minutes, setMinutes] = React.useState(0);
       const onChange = (event) => {
         setMinutes(event.target.value);
       };
+      const reset = () => setMinutes(0);
       return (
         <div>
-          <h1 class="hi">Super Converter</h1>
-          <label for="minutes">Minutes</label>
-          <input
-            value={minutes}
-            id="minutes"
-            placeholder="Minutes"
-            type="number"
-            onChange={onChange}
-          />
-          <h4>you want to convert {minutes}</h4>
-          <label id="hours">Hours</label>
-          <input id="hours" placeholder="Hours" type="number" />
+          <h1 className="hi">Super Converter</h1>
+          <div>
+            <label htmlFor="minutes">Minutes</label>
+            <input
+              value={minutes}
+              id="minutes"
+              placeholder="Minutes"
+              type="number"
+              onChange={onChange}
+            />
+          </div>
+          <div>
+            <label htmlFor="hours">Hours</label>
+            <input
+              value={Math.round(minutes / 60)}
+              id="hours"
+              placeholder="Hours"
+              type="number"
+            />
+          </div>
+          <button onClick={reset}>reset</button>
         </div>
       );
     }
