--- a/clonecoding/knom/react-for-beginners/index.html
+++ b/clonecoding/knom/react-for-beginners/index.html
@@ -9,34 +9,43 @@
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
     function App() {
-      const [minutes, setMinutes] = React.useState(0);
+      const [amount, setamount] = React.useState(0);
+      const [flipped, setFlipped] = React.useState(false);
       const onChange = (event) => {
-        setMinutes(event.target.value);
+        setamount(event.target.value);
       };
-      const reset = () => setMinutes(0);
+      const reset = () => setamount(0);
+      const onFlip = () => {
+        reset();
+        setFlipped((current) => !current);
+      };
       return (
         <div>
           <h1 className="hi">Super Converter</h1>
           <div>
-            <label htmlFor="minutes">Minutes</label>
+            <label htmlFor="amount">amount</label>
             <input
-              value={minutes}
-              id="minutes"
-              placeholder="Minutes"
+              value={flipped ? amount * 60 : amount}
+              id="amount"
+              placeholder="amount"
               type="number"
               onChange={onChange}
+              disabled={flipped}
             />
           </div>
           <div>
             <label htmlFor="hours">Hours</label>
             <input
-              value={Math.round(minutes / 60)}
+              value={flipped ? amount : Math.round(amount / 60)}
               id="hours"
               placeholder="Hours"
               type="number"
+              onChange={onChange}
+              disabled={!flipped}
             />
           </div>
           <button onClick={reset}>reset</button>
+          <button onClick={onFlip}>Flip</button>
         </div>
       );
     }
