--- a/clonecoding/knom/react-for-beginners/index.html
+++ b/clonecoding/knom/react-for-beginners/index.html
@@ -8,20 +8,19 @@
   <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
-    function App() {
-      const [amount, setamount] = React.useState(0);
+    function MinutesToHours() {
+      const [amount, setAmount] = React.useState(0);
       const [flipped, setFlipped] = React.useState(false);
       const onChange = (event) => {
-        setamount(event.target.value);
+        setAmount(event.target.value);
       };
-      const reset = () => setamount(0);
+      const reset = () => setAmount(0);
       const onFlip = () => {
         reset();
         setFlipped((current) => !current);
       };
       return (
         <div>
-          <h1 className="hi">Super Converter</h1>
           <div>
             <label htmlFor="amount">amount</label>
             <input
@@ -46,6 +45,66 @@
           </div>
           <button onClick={reset}>reset</button>
           <button onClick={onFlip}>Flip</button>
+        </div>
+      );
+    }
+
+    function KmToMiles() {
+      const [Kmeter, setKmeter] = React.useState(0);
+      const [flipped, setFlipped] = React.useState(false);
+      const onChange = (event) => {
+        setKmeter(event.target.value);
+      };
+      const reset = () => setKmeter(0);
+      const onFlip = () => {
+        reset();
+        setFlipped((current) => !current);
+      };
+      return (
+        <div>
+          <div>
+            <label htmlFor="Kmeter">Kmeter</label>
+            <input
+              value={flipped ? Math.round(Kmeter / 0.6) : Kmeter}
+              id="Kmeter"
+              placeholder="Kmeter"
+              type="number"
+              onChange={onChange}
+              disabled={flipped}
+            />
+          </div>
+          <div>
+            <label htmlFor="Miles">Miles</label>
+            <input
+              value={flipped ? Kmeter : Math.round(Kmeter * 0.6)}
+              id="Miles"
+              placeholder="Miles"
+              type="number"
+              onChange={onChange}
+              disabled={!flipped}
+            />
+          </div>
+          <button onClick={reset}>reset</button>
+          <button onClick={onFlip}>Flip</button>
+        </div>
+      );
+    }
+
+    function App() {
+      const [index, setIndex] = React.useState(-1);
+      const onSelect = (event) => {
+        setIndex(event.target.value);
+      };
+      return (
+        <div>
+          <h1 className="hi">Super Converter</h1>
+          <select value={event.target.value} onChange={onSelect}>
+            <option value="-1">Select </option>
+            <option value="0">Minutes & Hours</option>
+            <option value="1">KM & Miles</option>
+          </select>
+          {index === "0" ? <MinutesToHours /> : null}
+          {index === "1" ? <KmToMiles /> : null}
         </div>
       );
     }
