--- a/clonecoding/knom/react-for-beginners/index.html
+++ b/clonecoding/knom/react-for-beginners/index.html
@@ -8,103 +8,34 @@
   <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
-    function MinutesToHours() {
-      const [amount, setAmount] = React.useState(0);
-      const [flipped, setFlipped] = React.useState(false);
-      const onChange = (event) => {
-        setAmount(event.target.value);
-      };
-      const reset = () => setAmount(0);
-      const onFlip = () => {
-        reset();
-        setFlipped((current) => !current);
-      };
+    function Btn({ text, onClick }) {
+      console.log(text);
       return (
-        <div>
-          <div>
-            <label htmlFor="amount">amount</label>
-            <input
-              value={flipped ? amount * 60 : amount}
-              id="amount"
-              placeholder="amount"
-              type="number"
-              onChange={onChange}
-              disabled={flipped}
-            />
-          </div>
-          <div>
-            <label htmlFor="hours">Hours</label>
-            <input
-              value={flipped ? amount : Math.round(amount / 60)}
-              id="hours"
-              placeholder="Hours"
-              type="number"
-              onChange={onChange}
-              disabled={!flipped}
-            />
-          </div>
-          <button onClick={reset}>reset</button>
-          <button onClick={onFlip}>Flip</button>
-        </div>
+        <button
+          onClick={onClick}
+          style={{
+            backgroundColor: "tomato",
+            color: "white",
+            padding: "10px 20px",
+            border: "0",
+            borderRadius: "10px",
+            fontSize: 16,
+          }}
+        >
+          {text}
+        </button>
       );
     }
 
-    function KmToMiles() {
-      const [Kmeter, setKmeter] = React.useState(0);
-      const [flipped, setFlipped] = React.useState(false);
-      const onChange = (event) => {
-        setKmeter(event.target.value);
-      };
-      const reset = () => setKmeter(0);
-      const onFlip = () => {
-        reset();
-        setFlipped((current) => !current);
-      };
-      return (
-        <div>
-          <div>
-            <label htmlFor="Kmeter">Kmeter</label>
-            <input
-              value={flipped ? Math.round(Kmeter / 0.6) : Kmeter}
-              id="Kmeter"
-              placeholder="Kmeter"
-              type="number"
-              onChange={onChange}
-              disabled={flipped}
-            />
-          </div>
-          <div>
-            <label htmlFor="Miles">Miles</label>
-            <input
-              value={flipped ? Kmeter : Math.round(Kmeter * 0.6)}
-              id="Miles"
-              placeholder="Miles"
-              type="number"
-              onChange={onChange}
-              disabled={!flipped}
-            />
-          </div>
-          <button onClick={reset}>reset</button>
-          <button onClick={onFlip}>Flip</button>
-        </div>
-      );
-    }
+    const MemorizedBtn = React.memo(Btn);
 
     function App() {
-      const [index, setIndex] = React.useState(-1);
-      const onSelect = (event) => {
-        setIndex(event.target.value);
-      };
+      const [value, setValue] = React.useState("Save Changes");
+      const changeValue = () => setValue("Revert Changes");
       return (
         <div>
-          <h1 className="hi">Super Converter</h1>
-          <select value={event.target.value} onChange={onSelect}>
-            <option value="-1">Select </option>
-            <option value="0">Minutes & Hours</option>
-            <option value="1">KM & Miles</option>
-          </select>
-          {index === "0" ? <MinutesToHours /> : null}
-          {index === "1" ? <KmToMiles /> : null}
+          <MemorizedBtn text={value} onClick={changeValue} />
+          <MemorizedBtn text="Continue" />
         </div>
       );
     }
