--- a/clonecoding/calko/index.html
+++ b/clonecoding/calko/index.html
@@ -9,6 +9,7 @@
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
     function Btn({ text, fontSize = 12 }) {
+      // 4.3 Recap
       return (
         <button 
           style={{
