--- a/clonecoding/tkgk/react-for-beginners/index.html
+++ b/clonecoding/tkgk/react-for-beginners/index.html
@@ -9,15 +9,21 @@
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel">
   const root = document.getElementById('root');
-  function Title() {return (<h3 id = 'title' onMouseEnter = {() => console.log('mouse enter')}> 'hello i`m a span' </h3>)};
-  const Button = () => (<button style={{backgroundColor: 'tomato'}} onClick={()=>console.log('im clicked')}>'click me'</button>)
+  let counter = 0;
+  function countUp(){
+    counter = counter + 1;
+    render();
+  }
+  function render(){
+    ReactDOM.render(<Container />, root);
+  }
 
-
-  const Container = ()=> (<div>
-    <Title />
-    <Button />
+  const Container = () => (
+    <div>
+      <h3>total clicks: {counter}</h3>
+      <button onClick={countUp}>click me</button>
     </div>) // Container도 컴포넌트라서 첫글자 대문자?
-  ReactDOM.render(<Container />, root);
+    render();
 </script>
 
 </html>
