--- a/clonecoding/tkgk/react-for-beginners/index.html
+++ b/clonecoding/tkgk/react-for-beginners/index.html
@@ -11,13 +11,15 @@
   const root = document.getElementById('root');
   
   function App() {
-    const [counter, modifier] = React.useState(0);
-    console.log(data);
+    const [counter, setCounter] = React.useState(0);
+    const onClick=()=>{
+      setCounter(counter + 1);
+    }
 
     return (
       <div>
-        <h3>total clicks: 0</h3>
-        <button>click me</button>
+        <h3>total clicks: {counter}</h3>
+        <button onClick={onClick}>click me</button>
       </div>
       )
   }
