--- a/clonecoding/tkgk/react-for-beginners/index.html
+++ b/clonecoding/tkgk/react-for-beginners/index.html
@@ -11,16 +11,20 @@
   const root = document.getElementById('root');
   
   function App() {
-    const [counter, setCounter] = React.useState(0);
-    const onClick=()=>{
-      // setCounter(counter + 1);
-      setCounter((current) => current+1)
+    const [minutes, setMinutes] = React.useState();
+    const onChange=(e)=>{
+      setMinutes(e.target.value);
+      console.log(e.target.value);
     }
-
+    
     return (
       <div>
-        <h3>total clicks: {counter}</h3>
-        <button onClick={onClick}>click me</button>
+        <h1 className='hi'>super converter</h1>
+        <label htmlFor="minutes">minutes</label>
+        <input id='minutes' type="number" placeholder='minutes' value={minutes} onChange={onChange} />
+        <h4>you want to convert {minutes}</h4>
+        <label htmlFor="hours">hours</label>
+        <input id='hours' type="number" placeholder='hours' />
       </div>
       )
   }
