--- a/clonecoding/tkgk/react-for-beginners/index.html
+++ b/clonecoding/tkgk/react-for-beginners/index.html
@@ -11,14 +11,17 @@
   const root = document.getElementById('root');
   
   function App() {
-    const [minutes, setMinutes] = React.useState();
+    const [amount, setAmount] = React.useState();
+    const [flipped, setFlipped] = React.useState(false);
     const onChange=(e)=>{
-      setMinutes(e.target.value);
+      setAmount(e.target.value);
       console.log(e.target.value);
     }
 
-    function reset(){
-      setMinutes(0);
+    const reset = () => setAmount(0);
+    const onFlip = () => {
+      reset();
+      setFlipped(current => !current);
     }
     
     return (
@@ -26,13 +29,15 @@
         <h1 className='hi'>super converter</h1>
         <div>
           <label htmlFor="minutes">minutes</label>
-          <input id='minutes' type="number" placeholder='minutes' value={minutes} onChange={onChange} />
+          <input id='minutes' type="number" placeholder='minutes' 
+          value={flipped ? amount*60 : amount} onChange={onChange} disabled={flipped} />
         </div>
         <div>
           <label htmlFor="hours">hours</label>
-          <input id='hours' type="number" placeholder='hours' value={Math.round(minutes / 60)} />
+          <input id='hours' type="number" placeholder='hours' value={flipped ? amount : Math.round(amount / 60)} onChange={onChange} disabled={!flipped} />
         </div>
         <button onClick={reset}>reset</button>
+        <button onClick={onFlip}>flip</button>
       </div>
       )
   }
