--- a/clonecoding/tkgk/react-for-beginners/index.html
+++ b/clonecoding/tkgk/react-for-beginners/index.html
@@ -12,7 +12,7 @@
   
   function App() {
     const [amount, setAmount] = React.useState();
-    const [flipped, setFlipped] = React.useState(false);
+    const [inverted, setInverted] = React.useState(false);
     const onChange=(e)=>{
       setAmount(e.target.value);
       console.log(e.target.value);
@@ -21,7 +21,7 @@
     const reset = () => setAmount(0);
     const onFlip = () => {
       reset();
-      setFlipped(current => !current);
+      setInverted(current => !current);
     }
     
     return (
@@ -30,14 +30,14 @@
         <div>
           <label htmlFor="minutes">minutes</label>
           <input id='minutes' type="number" placeholder='minutes' 
-          value={flipped ? amount*60 : amount} onChange={onChange} disabled={flipped} />
+          value={inverted ? amount*60 : amount} onChange={onChange} disabled={inverted} />
         </div>
         <div>
           <label htmlFor="hours">hours</label>
-          <input id='hours' type="number" placeholder='hours' value={flipped ? amount : Math.round(amount / 60)} onChange={onChange} disabled={!flipped} />
+          <input id='hours' type="number" placeholder='hours' value={inverted ? amount : Math.round(amount / 60)} onChange={onChange} disabled={!inverted} />
         </div>
         <button onClick={reset}>reset</button>
-        <button onClick={onFlip}>flip</button>
+        <button onClick={onFlip}>{inverted ? 'turn back' : 'invert'}</button>
       </div>
       )
   }
