--- a/clonecoding/tkgk/react-for-beginners/index.html
+++ b/clonecoding/tkgk/react-for-beginners/index.html
@@ -9,8 +9,7 @@
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel">
   const root = document.getElementById('root');
-  
-  function App() {
+  function MinutesToHours() {
     const [amount, setAmount] = React.useState();
     const [inverted, setInverted] = React.useState(false);
     const onChange=(e)=>{
@@ -26,7 +25,6 @@
     
     return (
       <div>
-        <h1 className='hi'>super converter</h1>
         <div>
           <label htmlFor="minutes">minutes</label>
           <input id='minutes' type="number" placeholder='minutes' 
@@ -38,6 +36,31 @@
         </div>
         <button onClick={reset}>reset</button>
         <button onClick={onFlip}>{inverted ? 'turn back' : 'invert'}</button>
+      </div>
+      )
+  }
+  function KmToMiles(){
+    return (
+      <div>KM 2M</div>
+    )
+  }
+  function App() {
+    const [index, setIndex] = React.useState('xx');
+    const onSelect = (e)=>{
+      setIndex(e.target.value);
+    }
+    return (
+      <div>
+        <h1>super converter</h1>
+        <select value={index} onChange={onSelect}>
+          <option value="xx">Select your units</option>
+          <option value="0">Minutes & Hours</option>
+          <option value="1">Km & Miles</option>
+        </select>
+        <hr />
+        {index === 'xx' ? 'please select your units' : null}
+        {index === '0' ? <MinutesToHours /> : null}
+        {index === '1' ? <KmToMiles /> : null}
       </div>
       )
   }
